# MiniCode

./: README.md
PETSc/AO/Ex1/: CMakeLists.txt  Mesh.cpp  Mesh.h  TestFuns.h  main.cpp
PETSc/DM/Ex1/: CMakeLists.txt  main.cpp
PETSc/Vec/Ex1/: CMakeLists.txt  asfem  main.cpp
Poisson/: CMakeLists.txt
Poisson/include/: BCSystem.h  DofHandler.h  ElmtSystem.h  EquationSystem.h  FESystem.h  Mesh.h  NonlinearSolver.h  QPoint.h  ShapeFun.h  SolutionSystem.h  Welcome.h
Poisson/src/: main.cpp
Poisson/src/BCSystem/: ApplyBC.cpp  BCSystem.cpp  PrintBCInfo.cpp  SetBC.cpp
Poisson/src/DofHandler/: CreateDofMap.cpp  DofHandler.cpp  PrintDofMap.cpp
Poisson/src/ElmtSystem/: ElmtLib.cpp  Poisson.cpp
Poisson/src/EquationSystem/: CreateSparsityPattern.cpp  EquationSystem.cpp  InitEquationSystem.cpp
Poisson/src/FESystem/: FormKR.cpp  Init.cpp
Poisson/src/Mesh/: CreateMesh.cpp  Mesh.cpp  PrintMeshInfo.cpp
Poisson/src/NonlinearSolver/: CheckConvergence.cpp  NewtonRaphson.cpp  NonLinearSolve.cpp  NonlinearSolver.cpp  Solve.cpp
Poisson/src/QPoint/: Create1DGaussPoint.cpp  QPoint.cpp
Poisson/src/ShapeFun/: Compute1DLagrangeShapeFun.cpp  ShapeFun.cpp
Poisson/src/SolutionSystem/: SolutionSystem.cpp
SparseMatrix/MySpMat1/: CMakeLists.txt  SpMat.cpp  SpMat.h  main.cpp
Vector/: CMakeLists.txt  main.cpp
Viennacl/Ex1/: CMakeLists.txt  main.cpp
Viennacl/VectorCompare/: CMakeLists.txt  README.md  main.cpp
